--- a/Final_podcast.html
+++ b/Final_podcast.html
@@ -5,6 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Podcast</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <style>
+          .hero{
+            padding-left: 30.0px;
+            padding-right: 30.0px;
+          }
+          .title{
+            font-weight: 200.0px;
+          }
+        </style>
     </head>
 
 
@@ -25,7 +34,7 @@
       
         <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="Final_homepage.html">
+            <a class="navbar-item" href="index.html">
               Home
             </a>
       
@@ -41,7 +50,7 @@
                 About Me
             </a>
 
-            <a class="navbar-item" href="Finaal_Reflections.html">
+            <a class="navbar-item" href="Final_Reflections.html">
                 Reflections
             </a>
 
@@ -55,16 +64,61 @@
 
 
 
-    <section class="hero is-medium is-link">
-        <div class="hero-body">
-          <p class="title">
-            Medium hero
+    <!--HERO-->
+    <section class="hero is-small is-link" style="background-color: white;" padding-right="30px">
+      <div class="hero-body" style="background-color: #ED7D2D">
+        <div class="columns is-vcentered">
+          <div class="column is-8">
+            <h1 class="title is-1" style="color:#000">
+              Beyond The Set 
+              <br>
+              Season 1
+            </h1>
+            <p>
+              <button class="button is-primary" href="https://rss.com/podcasts/beyond-the-set/" style="background-color:#00BDD6">
+                Public Profile
+              </button>
           </p>
-          <p class="subtitle">
-            Medium subtitle
-          </p>
+          </div>
+          <div class="column">
+            <figure class="image is-256x256">
+              <img src="BeyondTheSet.png">
+            </figure>
+          </div>
         </div>
+      </div>
     </section>
+  <!--END OF HERO-->
+<br>
+<br>
+  <!--MEET THE HOSTS-->
+  <nav class="level">
+    <div class="level-item has-text-centered">
+        <div margin="centered">
+            <p style="color:#000" class = "title">
+                Meet the hosts 
+            </p>
+        </div>
+    </div>
+  </nav>
+  <section class="section">
+    <h1 class="title">Hosts cards will go here</h1>
+  </section>
+  <!-- END OF MEET THE HOSTS-->
+
+  <!--EPISODES-->
+  <section class="section">
+    <p class="subtitle"><strong>Episodes</strong></p>
+
+  </section>
+  <!--END OF EPISODES-->
+
+  <!--REVIEWS-->
+  <section class="section">
+    <p class="subtitle"><strong>Episdoe Reviews</strong></p>
+
+  </section>
+  <!--END OF REVIEWS-->
 
 
 
