--- a/Final_Aboutme.html
+++ b/Final_Aboutme.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About Me</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <style>
+          body{
+            background-color: #D9CBF6;
+
+          }
+        </style>
     </head>
 
 
@@ -25,7 +31,7 @@
       
         <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="Final_homepage.html">
+            <a class="navbar-item" href="index.html">
               Home
             </a>
       
@@ -41,7 +47,7 @@
                 About Me
             </a>
 
-            <a class="navbar-item" href="Finaal_Reflections.html">
+            <a class="navbar-item" href="Final_Reflections.html">
                 Reflections
             </a>
 
@@ -53,23 +59,33 @@
     </nav>
     <!--END NAV BAR-->
 
-    <section class="hero is-medium is-link">
+    <!--HERO-->
+    <section class="hero is-medium is-link" style="background-color: white;">
         <div class="hero-body">
-          <p class="title">
-            Medium hero
-          </p>
-          <p class="subtitle">
-            Medium subtitle
-          </p>
+          <nav class="level">
+            <div class="level-item has-text-centered">
+                <div margin="centered">
+                    <p style="color:#000000" class = "title">
+                        So who am I? 
+                    </p>
+                </div>
+            </div>
+          </nav>
+          <div class="box">
+            Pictures will go here...
           </div>
+        </div>
     </section>
+    <!--END OF HERO-->
 
-    <section class="section is-medium">
-        <h1 class="title">Medium section</h1>
-        <h2 class="subtitle">
-          A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading.
-        </h2>
+    <!--ABOUT ME -->
+    <section class="section is-large">
+      <h1 class="title">Large section</h1>
+      <h2 class="subtitle">
+        A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading.
+      </h2>
     </section>
+    <!--END OF ABOUT ME -->
 
 
 
