--- a/Final_Reflections.html
+++ b/Final_Reflections.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reflections</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <style>
+          body{
+            background-color: #B8F5CD;
+          }
+          
+        </style>
     </head>
 
 
@@ -41,7 +47,7 @@
                 About Me
             </a>
 
-            <a class="navbar-item" href="Finaal_Reflections.html">
+            <a class="navbar-item" href="Final_Reflections.html">
                 Reflections
             </a>
 
@@ -55,24 +61,28 @@
 
 
 
-    <section class="hero is-medium is-link">
-        <div class="hero-body">
-          <p class="title">
-            Medium hero
-          </p>
-          <p class="subtitle">
-            Medium subtitle
-          </p>
-          </div>
-    </section>
+    <!--HERO-->
+    <section class="hero is-large" style="background-color: white;">
+      <div class="hero-body">
+        <div class="box">
+          Pictures will go here...
+        </div>
+      </div>
+  </section>
+  <!--END OF HERO-->
 
-    <section class="section is-medium">
-        <h1 class="title">Medium section</h1>
-        <h2 class="subtitle">
-          A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading.
-        </h2>
-    </section>
+  <!--REFLECTIONS -->
+  <section class="section is-large">
+    <h1 class="title" style="color:#000000">
+      Reflections
+    </h1>
+    <h2 class="subtitle" style="color:#000000">
+      A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading.
+    </h2>
+  </section>
+  <!--END OF REFLECTION -->
 
 
-    </body>
+
+</body>
 </html>
