--- a/index.html
+++ b/index.html
@@ -241,27 +241,23 @@
 
     <!--CONTACT ME BOX-->
     <section class="section">
-        <div class="columns is-mobile is-centered">
-        <div class="box" style="width: 1200.0px; height:300.0px;">
-            <div class="columns is-multiline is-mobile">
-                <div class="column is-two-thirds">
+        <div class="tile is-ancestor">
+            <div class="tile is-parent is-12">
+                <article class="tile is-child box">
                     <div class="block">
-                    <h1 class = "title is-1" style="color: #00BDD6"> 
-                        Contact me.
-                    </h1>
-                    <p style="color: black">
-                        Let's connect! Whether you have a question or an exciting oppurtunity, click the button below to reach me. The inbox eagerly awaits you!
-                    </p>
-                    <br>
-                    <p>
-                        <button class="button is-primary" href="Final_contact.html" style="background-color:#00BDD6">Contact me</button>
-                    </p>
-                    </div>
-                </div>
-                <div class="column">
-                </div>
-            </div>
-        </div>
+                        <h1 class = "title is-1" style="color: #00BDD6"> 
+                            Contact me.
+                        </h1>
+                        <p style="color: black">
+                            Let's connect! Whether you have a question or an exciting oppurtunity, click the button below to reach me. The inbox eagerly awaits you!
+                        </p>
+                        <br>
+                        <p>
+                            <button class="button is-primary" href="Final_contact.html" style="background-color:#00BDD6">Contact me</button>
+                        </p>
+                        </div>
+                </article>
+              </div>
         </div>
     </section>
     <!--END OF CONTACT ME BOX-->
