--- a/Final_Aboutme.html
+++ b/Final_Aboutme.html
@@ -10,6 +10,22 @@
             background-color: #D9CBF6;
 
           }
+          .hero-image {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("ABOUTMECOLLAGE.png");
+            height: 50%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+          }
+          .hero-text {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+          }
         </style>
     </head>
 
@@ -31,8 +47,8 @@
       
         <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="index.html">
-              Home
+            <a class="navbar-item" href="index.html" style = "color: #00BDD6">
+              <Strong>Home</Strong>
             </a>
       
             <a class="navbar-item" href="Final_projectshowcase.html">
@@ -60,31 +76,92 @@
     <!--END NAV BAR-->
 
     <!--HERO-->
-    <section class="hero is-medium is-link" style="background-color: white;">
+    <section class="hero is-large" style="background-color: white;">
+      <div class="hero-image">
         <div class="hero-body">
-          <nav class="level">
-            <div class="level-item has-text-centered">
-                <div margin="centered">
-                    <p style="color:#000000" class = "title">
-                        So who am I? 
-                    </p>
-                </div>
-            </div>
-          </nav>
-          <div class="box">
-            Pictures will go here...
-          </div>
+        <div class="hero-text">
+          <h1 class="title is -1" style="color:white">So who am I?</h1>
+
         </div>
-    </section>
+      </div>
+    </div>
+</section>
     <!--END OF HERO-->
 
     <!--ABOUT ME -->
-    <section class="section is-large">
-      <h1 class="title">Large section</h1>
+    <section class="section">
+      <h1 class="title">Ja'Niyah Allen</h1>
       <h2 class="subtitle">
-        A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading.
+        Welcome to My Creative Journey!
       </h2>
+      <p>I'm Ja'Niyah Allen, and I'm thrilled to welcome you to me creative 
+        world. Heres' a glimpse into a who I am and the hounrey that has shaped me.</p>
     </section>
+    <section class="section">
+      <h2 class="subtitle">
+        My Story in a Nutshell
+      </h2>
+      <p>
+        I hail from the vibrant city of Orlando, Florida, and my academic journey commenced
+         at Florida A&M University in the fall of 2015. Yes, it's been quite a journey, marked by 
+         twists and turns that have shaped my path over the years.
+         <br>
+         Throughout my time at FAMU, I actively engaged in various organizations that enriched my 
+         collegiate experience. I was a proud member of Theta Tau Professional Engineering Fraternity, 
+         the National Society of Black Engineers, and the Chance to Impress Mentor Program. My involvement
+          extended beyond participation; I assumed several leadership roles that defined my journey—serving 
+          as Miss Black for the FAMU chapter of Progressive Black Men Inc., holding secretarial responsibilities 
+          for Chance to Impress, and taking on diverse roles such as Service Chair, Professional Development Chair, 
+          and Vice Regent for the Phi Delta chapter of Theta Tau Professional Engineering Fraternity. Additionally, 
+          I contributed my skills and insights as a member of the Student Engineering Leadership Board and the #LetsStartHere 
+          committee.
+          <br>
+          Finally, the culmination of this incredible journey approaches as I am set to graduate in the fall of 2023 from Florida 
+          A&M University. The anticipation of this achievement fills me with excitement and gratitude for the transformative experiences 
+          that have shaped my collegiate years.
+
+As one chapter ends, another promising one begins, and I can't wait to share the next steps of my journey with you.
+      </p>
+
+    </section>
+    <section class="section">
+      <h2 class="subtitle">
+        Through  My Lens: Passion and Creativity
+      </h2>
+      <p>
+        Throughout the semster, I have had to rediscover my passion for creativity. In all honesty, 
+        my creative spark lay dormant since my high school days, a chapter now closed for quite a few years. 
+        The revival of my creativity emerged unexpectedly during an Intro to Programming Course for Apple products. 
+        It was a deep dive within myself, a rediscovery of the artistic potential I thought I had left behind.
+      </p>
+      <br>
+      <h2 class="subtitle-2">
+        Creative Process Unveiled:
+      </h2>
+      <br>
+      <p>
+        My ultimate drive, however, stems from the practicalities of life – setting myself up financially. Balancing 
+        college life and preparing for the next steps often relegated hobbies and creativity to the back burner. Yet, 
+        amidst the hustle, creativity became an unexpected stress reliever, a respite from the demands of academia.
+        Therefore my creative process has relied on spontaneity. Ideas don't manifest until I push pen to paper—or 
+        in this case, iPad. The act of creation becomes a dynamic dance between the unexpected and the deliberate. Each 
+        stroke, each pixel, is a testament to the fusion of the unplanned and the intentional.
+      </p>
+
+    </section>
+    <section class="section">
+      <h2 class="subtitle">
+        Join Me on the Journey
+      </h2>
+      <p>
+        Follow my journey of discovering myself throughout this semester by exploring the website and following my social pages.
+        Thank you for stepping into my creative wourld. I'm thrilled to share the twists and turns of my journey. 
+        Download my resume <a href="Ja'Niyah Allen Resume 2023.pdf"><strong>here</strong></a>.
+      </p>
+
+
+    </section>
+
     <!--END OF ABOUT ME -->
 
 
