--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 Portfolio Showcase
             </a>
 
+            <a class="navbar-item" href="Final_Aboutme.html">
+                About Me
+            </a>
+
             <a class="navbar-item" href="Final_podcast.html">
                 Podcast
             </a>
