--- a/Final_Aboutme.html
+++ b/Final_Aboutme.html
@@ -8,6 +8,7 @@
         <style>
           body{
             background-color: #D9CBF6;
+            color: black;
 
           }
           .hero-image {
@@ -26,6 +27,7 @@
             transform: translate(-50%, -50%);
             color: white;
           }
+
         </style>
     </head>
 
@@ -90,15 +92,15 @@
 
     <!--ABOUT ME -->
     <section class="section">
-      <h1 class="title">Ja'Niyah Allen</h1>
-      <h2 class="subtitle">
+      <h1 class="title" style="color:#000000">Ja'Niyah Allen</h1>
+      <h2 class="title is-4" style="color: black">
         Welcome to My Creative Journey!
       </h2>
       <p>I'm Ja'Niyah Allen, and I'm thrilled to welcome you to me creative 
         world. Heres' a glimpse into a who I am and the hounrey that has shaped me.</p>
     </section>
     <section class="section">
-      <h2 class="subtitle">
+      <h2 class="title is-4" style="color: black">
         My Story in a Nutshell
       </h2>
       <p>
@@ -125,7 +127,7 @@ As one chapter ends, another promising one begins, and I can't wait to share the
 
     </section>
     <section class="section">
-      <h2 class="subtitle">
+      <h2 class="title is-4" style="color: black">
         Through  My Lens: Passion and Creativity
       </h2>
       <p>
@@ -135,10 +137,9 @@ As one chapter ends, another promising one begins, and I can't wait to share the
         It was a deep dive within myself, a rediscovery of the artistic potential I thought I had left behind.
       </p>
       <br>
-      <h2 class="subtitle-2">
+      <h2 class="title is-6" style="color: black">
         Creative Process Unveiled:
       </h2>
-      <br>
       <p>
         My ultimate drive, however, stems from the practicalities of life – setting myself up financially. Balancing 
         college life and preparing for the next steps often relegated hobbies and creativity to the back burner. Yet, 
@@ -150,7 +151,7 @@ As one chapter ends, another promising one begins, and I can't wait to share the
 
     </section>
     <section class="section">
-      <h2 class="subtitle">
+      <h2 class="title is-4" style="color: black">
         Join Me on the Journey
       </h2>
       <p>
