--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             margin-left: 50.0px;
             }
           .hero-image{
-            background-image: url("ArtWatercolor.png");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("ArtWatercolor.png");
+            height: 50%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
             }
             .fa:hover { 
             opacity: 0.9; 
