--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin-left: 50.0px;
             }
           .hero-image{
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("ArtWatercolor.png");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("ArtWatercolor.PNG");
             height: 50%;
             background-position: center;
             background-repeat: no-repeat;
