--- a/Final_podcast.html
+++ b/Final_podcast.html
@@ -113,8 +113,8 @@
             </p>
             <br>
             <p>
-              <button class="button is-primary" href="https://rss.com/podcasts/beyond-the-set/" style="background-color:#00BDD6">
-                Public Profile
+              <button class="button is-primary" style="background-color:#00BDD6">
+               <a href="https://rss.com/podcasts/beyond-the-set/" >Public Profile</a> 
               </button>
           </p>
           </div>
@@ -252,7 +252,7 @@
               Did you attend FAMU homecoming?! In this special episode, join us as we share our homecoming experiences,...
             </p>
             <div class="buttons">
-              <button class="button is-primary" style="background-color: black" href="https://rss.com/podcasts/beyond-the-set/1197778/"> Listen now</button>
+              <button class="button is-primary" style="background-color: black"><a href="https://rss.com/podcasts/beyond-the-set/1197778/" style="color: white;">Listen now</a></button>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
               In this episode we embark on a journey through the various stages of relationships that students experience during their college years...
             </p>
             <div class="buttons">
-              <button class="button is-primary" style="background-color: black" href="https://rss.com/podcasts/beyond-the-set/1209646/"> Listen now</button>
+              <button class="button is-primary" style="background-color: black"><a href="https://rss.com/podcasts/beyond-the-set/1209646/" style="color:white;"> Listen now</a></button>
             </div>
           </div>
         </div>
@@ -305,7 +305,7 @@
               In this episode, we tackle the messiness of stress and turn it into a roadmap for success...          </p>
             </p>
             <div class="buttons">
-              <button class="button is-primary" style="background-color: black" href="https://rss.com/podcasts/beyond-the-set/1225034/"> Listen now</button>
+              <button class="button is-primary" style="background-color: black"><a  href="https://rss.com/podcasts/beyond-the-set/1225034/" style="color: white;">Listen now</a> </button>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
               uncover the hidden consequences of our online presence...
             </p>
             <div class="buttons">
-              <button class="button is-primary" style="background-color: black" href="https://rss.com/podcasts/beyond-the-set/1234157/"> Listen now</button>
+              <button class="button is-primary" style="background-color: black"><a href="https://rss.com/podcasts/beyond-the-set/1234157/" style="color:white">Listen now</a></button>
             </div>
           </div>
         </div>
@@ -361,7 +361,7 @@
               preparation...
             </p>
             <div class="buttons">
-              <button class="button is-primary" style="background-color: black" href="https://rss.com/podcasts/beyond-the-set/1246922/"> Listen now</button>
+              <button class="button is-primary" style="background-color: black"><a  href="https://rss.com/podcasts/beyond-the-set/1246922/" style="color: white;"> Listen now</a> </button>
             </div>
           </div>
         </div>
