--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin-left: 50.0px;
             }
           .hero-image{
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("ArtWatercolor.PNG");
+            background-image: linear-gradient(rgba(0, 0, 0,0), rgba(0, 0, 0,0)), url("ArtWatercolor.PNG");
             height: 50%;
             background-position: center;
             background-repeat: no-repeat;
@@ -124,7 +124,7 @@
                      aspirations, and a lens into my personality. Welcome to tapestry of my existence- dreams, laughter and pursuit of a life well-lived.
                 </p>
                 <p>
-                    <button class="button is-primary" href="Final_Aboutme.html" style ="background-color: #00BDD6">About me</button>
+                    <button class="button is-primary" style ="background-color: #00BDD6"><a href="Final_Aboutme.html" style="color:white">About me</a></button>
                 </p>
             </div>
             </div>
@@ -262,7 +262,7 @@
                         </p>
                         <br>
                         <p>
-                            <button class="button is-primary" href="Final_contact.html" style="background-color:#00BDD6">Contact me</button>
+                            <button class="button is-primary" style="background-color:#00BDD6"><a href="Final_contact.html" style = "color: white"> Contact me</a></button>
                         </p>
                         </div>
                 </article>
