--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     Check this out 
                 </p>
                 <p style="color:#fff">
-                    Some text will go here
+                    Check out some of the cool things I have been working on!
                 </p>
             </div>
         </div>
@@ -262,7 +262,7 @@
                         </p>
                         <br>
                         <p>
-                            <button class="button is-primary" style="background-color:#00BDD6"><a href="Final_contact.html" style = "color: white"> Contact me</a></button>
+                            <button class="button is-primary" style="background-color:#00BDD6"><a href="Final_contact.html" style = "color: white">Contact me</a></button>
                         </p>
                         </div>
                 </article>
